# px0

./: .env.example  .gitignore  .golangci.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  Makefile  README.md  benchmarking.md  development.md  docker-compose.yml  get-started-telemetry.md  get-started.md  go.mod  go.sum  otel-config.yaml  prometheus.yml
cmd/destroy/: main.go
cmd/loadtest/: main.go
cmd/migrate/: main.go
cmd/server/: main.go
docs/: search.md
docs/openapi/: api-keys.yaml  auth.yaml  cache.yaml  health.yaml  inbox.yaml  openapi-bundled.yaml  openapi.yaml  orgs.yaml  profile.yaml  projects.yaml  prompt-payloads.yaml  prompt-renders.yaml  prompt-versions.yaml  prompts.yaml  search.yaml  skill-files.yaml  skill-versions.yaml  skills.yaml  team-management.yaml  team-memberships.yaml  teams.yaml  tool-versions.yaml  tools.yaml  user-management.yaml
get-started/: get-started-benchmarking.md  get-started-prompt-running.md  get-started-search.md  get-started-skills.md  get-started-telemetry.md  get-started-tools.md  get-started.md
grafana/dashboards/: px0-dashboard.json  redis-dashboard.json
internal/apierr/: errors.go  errors_test.go
internal/app/: app.go
internal/db/: db.go  migrate.go
internal/embedderfactory/: factory.go
internal/handler/: apikey.go  apikey_projects_test.go  apikey_test.go  auth.go  auth_test.go  cache.go  cache_test.go  cors_test.go  health.go  health_test.go  helpers.go  helpers_test.go  join_requests_test.go  org.go  org_test.go  payload.go  (+24 more)
mcp-server/: README.md  pyproject.toml  server.py  test_server.py
(+104 files in other folders)
